--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+.text-outline {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+}
+
+.img-shadow {
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2)
+}
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,10 +26,10 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
-  /* background: var(--background);
-  color: var(--foreground); */
+  background: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
